# nemscraper

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.assetsexporter  Dockerfile.compactor  Dockerfile.nemscraper  Dockerfile.processor  Dockerfile.uploader  README.md  calcs.md  discovery.md  docker-compose.yaml  export_assets_size.sh  file_state  gcs.sh  llm.txt  nem_data.duckdb.wal  procedure.md  profile.pb  profile.txt  schema_evolutions.json  schemas_history.json  send.txt  series.sql  stats.sh  test.csv
.cargo/: config.toml
assets/schemas/: 200908.json  200909.json  201001.json  201002.json  201003.json  201007.json  201011.json  (+96 more)
evolutions/: ADG_DETAIL-202408-202505-dd947859a81d14c23a3444b28d61b74e1349b5446f506cca762a25ed90e3ee50.txt  AGGREGATE_DISPATCH_GROUP-202408-202505-3933efd10a47072565ae9ceb0e741e38b6333f0db77f5946325c870b0856ae4f.txt  ANCILLARY_RECOVERY_SPLIT-200907-202404-518d08d7158137ed0f247b36a75e020b1af0bf2283447ec3c70e0b6f96a03897.txt  ANCILLARY_RECOVERY_SPLIT-202405-202407-326d66ce3e8bee2dea50ba9603cfd8f9ad4932d1bb3dba09c4a6bdbe906b8a52.txt  ANCILLARY_RECOVERY_SPLIT-202405-202505-326d66ce3e8bee2dea50ba9603cfd8f9ad4932d1bb3dba09c4a6bdbe906b8a52.txt  ANCILLARY_RECOVERY_SPLIT-202408-202505-d10c7fbaaf7189622362af5653741d876ab4c2f10d519ddfc6f55715a83e5e82.txt  APEVENT-200911-202405-de7a86b101e1d74888285c2a75315e751a0cd4e7a5a904f9caee15253812722f.txt  APEVENT-200911-202505-de7a86b101e1d74888285c2a75315e751a0cd4e7a5a904f9caee15253812722f.txt  APEVENT-202408-202505-6c59f31aa4d401d998360acd957968c649d2234e0e4d930ccf8a2338b9011e47.txt  APEVENTREGION-200911-202211-de5b47dff61fa697bb6c79c4596a4ce1af34d90e3821bd52a7b3049e7ecab580.txt  APEVENTREGION-202405-202405-9577f738224bdb5d28f091606740ebbfbfb1782d7064d4ad91ba39d607710296.txt  APEVENTREGION-202405-202505-9577f738224bdb5d28f091606740ebbfbfb1782d7064d4ad91ba39d607710296.txt  APEVENTREGION-202408-202505-61ac0016e8ff224f521aba7c843d70912883c79e69de0977ac7a28d6b840bc31.txt  AUCTION-200909-202407-fd3c00679ee093a2812ffe2b95dc08fb963dad3cc1d61e0d7bfc8f6be43c6867.txt  AUCTION-202409-202505-f12be2cea366a0c8976fddfe4f569db56a8b2b313b2bef866bd9ea08a36d1ff8.txt  AUCTION_CALENDAR-200909-201607-d0ca0ee9b428201c9d019ef349ed03de95760756b4c34119e573d551033960aa.txt  AUCTION_CALENDAR-201610-202407-be413e8346fe95968d61e90cf7081897ebc4c30c0d723185bde8786d7a712f57.txt  AUCTION_CALENDAR-202409-202505-1afdf6465a8e9905fde0d21c2cb5966ae5c619daf87febdf57d6af46a0c4fcb6.txt  AUCTION_IC_ALLOCATIONS-200909-201908-04c8e8a187e3e96604825f02bcc836eaf7d58d683d5af6b55abecb2f6530b191.txt  AUCTION_IC_ALLOCATIONS-201910-202407-b39379aab7c9f9c09bd693676caad2184d6986608e9eec77aa7ef19a64d54ce9.txt  AUCTION_IC_ALLOCATIONS-202408-202505-7b024ed3b8c3bba099429b27ea0be612015af5c9878c8697c5a3b88f1b135d9b.txt  AUCTION_REVENUE_ESTIMATE-200909-202505-7a9905e84ae9f4e847bb72b48a5c41c7b6fa727a5c50172db797a1406df7b1ad.txt  AUCTION_REVENUE_TRACK-200909-202505-5c55168f42464ffcb53d9d9ade3d33e8823a227b4c2dc9824f8bb492fb5e205c.txt  AUCTION_RP_ESTIMATE-200909-202505-277d97b48844cb291b0667f9e62f42079d8629d66edb3d1020bc0f0abb9e79a6.txt  AUCTION_TRANCHE-200909-202407-a6b20d47c94bd13a57cebab5b53fb2ba3b39e0fd1be6956f3fa344dbcc46f241.txt  AUCTION_TRANCHE-202409-202505-8afe7b572822ea74163612c2615b78ead684ba9066ee80d5445a879a140b263a.txt  AVERAGEPRICE30-202408-202505-c11644a6b4b2bdf7775245a63c420579bc501bdfce858f5061335f99eda6d301.txt  BIDDAYOFFER-200907-201405-376c5c3629f0e077c2ed9a7a5bec84f19cf181698f3d4b603dd0414251eae80d.txt  BIDDAYOFFER-201406-202102-fa139890026813b9decf4790b14a7ae0b39af55362fce277e7089bcf420aadf3.txt  BIDDAYOFFER-202103-202103-f7e85be1840a084f30d2cd55557892b0ae5e68dfbff0d4d17f529c5a1e6f0863.txt  BIDDAYOFFER-202104-202402-9bc55bf52d91e471fe82efcdf27dfd00eaa6c6d726cb2dd657def35c6541e325.txt  BIDDAYOFFER-202403-202407-2a99d1e676f2c877748b12882932cc39aa27b9721a803299cb5afe2dc812c8d8.txt  BIDDAYOFFER-202403-202505-2a99d1e676f2c877748b12882932cc39aa27b9721a803299cb5afe2dc812c8d8.txt  BIDDAYOFFER-202408-202505-2304b6ab267c8f4d6d801ce1257c713bb3e0c6cb34d999ae0fceef635b05de79.txt  BIDDAYOFFER_D-200907-201405-ed0cc65a664c517d784bbf3cdd090e06fdb67adaa5cf72976a5057c12296530e.txt  BIDDAYOFFER_D-201406-202102-cc61eb4fd1e23c4a320a68da9c4c72cda15310f9dd49a6346cf73f7f81194511.txt  BIDDAYOFFER_D-201406-202505-cc61eb4fd1e23c4a320a68da9c4c72cda15310f9dd49a6346cf73f7f81194511.txt  BIDDAYOFFER_D-202408-202505-5aa8706d8a4d73e3438ca47e5b04851fb17c0d23289a93c6448914b0cf8f17b6.txt  BIDDUIDDETAILS-200907-202407-031f917ee8a2ef8eb0e10385c1fc7e3d3fc72c525cb8fd9fd2d147f784e03387.txt  BIDDUIDDETAILS-200907-202505-031f917ee8a2ef8eb0e10385c1fc7e3d3fc72c525cb8fd9fd2d147f784e03387.txt  (+635 more)
motherduck-duckdb-datasource/: go_plugin_build_manifest  gpx_duckdb_datasource_linux_amd64:Zone.Identifier  plugin.json
node_exporter_textfile/: assets_size.prom
prometheus/: prometheus.yaml
schemas/: 200907.json  200909.json  200910.json  200911.json  200912.json  201002.json  201003.json  201004.json  201005.json  201006.json  201008.json  201009.json  201010.json  201012.json  201101.json  201102.json  201103.json  201107.json  201109.json  201110.json  201111.json  201112.json  201203.json  201204.json  201206.json  201207.json  201208.json  201209.json  201210.json  201211.json  201212.json  201301.json  201302.json  201304.json  201305.json  201306.json  201307.json  201308.json  201309.json  201311.json  (+95 more)
schemasold/: 200907.json  200908.json  200911.json  200912.json  201001.json  201004.json  201005.json  201006.json  201007.json  201009.json  201010.json  201011.json  201103.json  201104.json  201105.json  201106.json  201108.json  201112.json  201201.json  201202.json  201205.json  201208.json  201303.json  201304.json  201308.json  201310.json  201312.json  201401.json  201402.json  201407.json  201410.json  201412.json  201502.json  201503.json  201509.json  201511.json  201601.json  201603.json  201606.json  201702.json  (+55 more)
scripts/: gcloud-sync.sh  validate.sh
secrets/: README.md
src/: fetch.rs  lib.rs  main.rs  utils.rs
(+51 files in other folders)
