[package]
name = "nemscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# ---------- Networking stack ----------
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
    "cookies",
    "blocking",
] }

reqwest-middleware = "0.4.2" # <- no extra features here
# -------------------------------------

scraper = "0.14"
url = "2.2"
anyhow = "1.0"
rand = "0.8"
tempfile = "3"
csv = "1.3.1"
zip = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
regex = "1.11.1"
futures = "0.3.31"
async-trait = "0.1.88"
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
sha2 = "0.10.9"
hex = "0.4.3"
prettytable-rs = "0.10.0"
arrow-schema = "55.1.0"
tokio-stream = "0.1.17"
num_cpus = "1.16.0"
arrow = "55.1.0"
parquet = "55.1.0"
rayon = "1.10.0"
glob = "0.3.2"
polars = { version = "0.48.1", features = [
    "lazy",
    "csv",
    "parquet",
    "timezones",
    "default",
] }
sysinfo = "0.35.1"
serde_yaml = "0.9.34"
