[package]
name = "nemscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# ========== Async Runtime ==========
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"

# ========== Networking & HTTP ==========
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "cookies",
    "gzip",
    "json",
    "rustls-tls",
    "stream",
] }

# ========== Web Scraping & Parsing ==========
scraper = "0.14"
url = "2.2"
regex = "1.11.1"

# ========== Serialization ==========
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

# ========== Data Processing ==========
arrow = "55.1.0"
parquet = "55.1.0"
rayon = "1.10.0"

# ========== File I/O & Compression ==========
zip = "3.0.0"
glob = "0.3.2"

# ========== Date & Time ==========
chrono = { version = "0.4.41", features = ["serde"] }

# ========== Logging & Tracing ==========
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

# ========== System & Utilities ==========
anyhow = "1.0"
sysinfo = "0.35.1"
once_cell = "1.21.3"
tempfile = "3.20.0"
futures-util = "0.3.31"
async_zip = { version = "0.0.17", features = ["tokio"] }
tokio-util = "0.7.15"
futures-lite = "2.0"
arrow-csv = "55.1.0"
arrow-schema = "55.1.0"
arrow-arith = "55.1.0"
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
encoding_rs = "0.8"
warp = "0.3.7"
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# ========== Yoshidan Google Cloud Rust Clients ==========
# note official google package is janked due to arrow Date clash.
google-cloud-auth = { package = "gcloud-auth", version = "1.0.0" }
google-cloud-storage = { package = "gcloud-storage", version = "1.0.0" }
google-cloud-bigquery = { package = "gcloud-bigquery", version = "1.0.0" }

# ========== Official Google Cloud Rust Clients ==========
# google-cloud-auth = "0.20.0"    # auth helper (ADC, retries, timeouts)
# google-cloud-storage = "0.24.0" # GCS client
# google-cloud-bigquery = "0.15.0" # BigQuery client

# [patch.crates-io]
# arrow-arith = { git = "https://github.com/apache/arrow-rs.git", tag = "55.1.0", package = "arrow-arith" }
